--- a/style.css
+++ b/style.css
@@ -51,9 +51,11 @@ body {
 .timeline {
     display: flex;
     align-items: center;
+    justify-content: center;
     padding: 50px 100px;
     min-width: max-content;
     position: relative;
+    height: 100%;
 }
 
 .timeline::before {
