--- a/style.css
+++ b/style.css
@@ -145,6 +145,7 @@ body {
     position: relative;
     transform-origin: center center;
     transition: transform 0.1s ease-out;
+    margin-top: 250px;
 }
 
 .timeline::before {
