--- a/style.css
+++ b/style.css
@@ -145,7 +145,8 @@ body {
     position: relative;
     transform-origin: center center;
     transition: transform 0.1s ease-out;
-    margin-top: 250px;
+    margin-top: 200px;
+    overflow: visible;
 }
 
 .timeline::before {
